--- a/personal_profile/package.json
+++ b/personal_profile/package.json
@@ -11,7 +11,8 @@
     "react-pdf": "^4.0.5",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.5",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
